--- a/五月/5.15.md
+++ b/五月/5.15.md
@@ -16,9 +16,8 @@
 ### Dropout
 - [Dropout一些知识解析 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/419695978)
 
-
-
 # **GitHub相关**
+
 ### 美化
 - [【Git】GitHub同名项目实现丰富多彩的README.md_星拱北辰的博客-CSDN博客](https://blog.csdn.net/weixin_43896318/article/details/122807529)
 - [github-readme-stats/readme_cn.md at master · anuraghazra/github-readme-stats](https://github.com/anuraghazra/github-readme-stats/blob/master/docs/readme_cn.md)
@@ -29,6 +28,9 @@
 - [MIT许可协议具体限制了什么？ - 知乎 (zhihu.com)](https://www.zhihu.com/question/25079718)
 
 ### 项目
+
+- ⭐ ***[amazing-fish/study-notes (github.com) ](https://github.com/amazing-fish/study-notes)*** ⭐
+
 - [Zephery/weiboanalysis: 微博情感分析，文本分类，毕业设计项目 (github.com)](https://github.com/Zephery/weiboanalysis)
 - [jasonleaster/FaceDetection: :star2: Human Face Detection based on AdaBoost (github.com)](https://github.com/jasonleaster/FaceDetection)
 
@@ -59,3 +61,9 @@
 - [BdRace数睿思_数据挖掘竞赛平台 (tipdm.org)](https://www.tipdm.org/)
 ### CSDN
 - [第十届泰迪杯感谢学习总结_计算机魔术师的博客-CSDN博客](https://blog.csdn.net/weixin_66526635/article/details/124501396)
+
+# 今日总结
+
+- 摸，没有写代码，看了西瓜书的集成学习部分……看晕了，都是公式没细看
+- 明天估计也没很多时间研究复现，继续看后面的聚类吧
+- 以及慢慢看《深度学习实战》——吕云翔、刘卓然。这本书学pytorch看起来讲的很细，后面都是实战，看到了再试试
