--- a/五月/5.16.md
+++ b/五月/5.16.md
@@ -3,3 +3,36 @@
 ### ResNet
 
 - [详解深度学习之经典网络架构（六）：ResNet 两代（ResNet v1和ResNet v2）_chenyuping666的博客-CSDN博客_resnet v2](https://blog.csdn.net/chenyuping333/article/details/82344334?ops_request_misc=%7B%22request%5Fid%22%3A%22165267173916782395377894%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165267173916782395377894&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-82344334-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=resnetv2&spm=1018.2226.3001.4187)
+
+### CNN
+
+#### 网站
+
+- **[CS231n 用于视觉识别的卷积神经网络](https://cs231n.github.io/convolutional-networks/)**
+
+#### 参数共享
+
+##### 疑问
+
+- 共享的是什么参数？
+- 为什么共享参数不会影响到特征提取？
+
+##### 资料
+
+- [CNN中的卷积操作与参数共享_☞源仔的博客-CSDN博客_卷积操作实现的参数共享是指多个卷积层上的参数共享](https://blog.csdn.net/weixin_54546190/article/details/122179752?spm=1001.2101.3001.6650.1&utm_medium=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~default-1-122179752-blog-53241133.pc_relevant_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~default-1-122179752-blog-53241133.pc_relevant_default&utm_relevant_index=2)
+- [一张图理解卷积层的参数共享_格林深瞳的博客-CSDN博客_参数共享](https://blog.csdn.net/ture_dream/article/details/53241133?ops_request_misc=%7B%22request%5Fid%22%3A%22165267535816781685349565%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165267535816781685349565&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-53241133-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=卷积神经网络为什么要参数共享&spm=1018.2226.3001.4187)
+- [卷积神经网络(CNN)笔记（五）—— 参数共享机制_zeeq_的博客-CSDN博客_参数共享机制](https://blog.csdn.net/weixin_44120025/article/details/114850627?ops_request_misc=%7B%22request%5Fid%22%3A%22165267535816781685349565%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165267535816781685349565&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-2-114850627-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=卷积神经网络为什么要参数共享&spm=1018.2226.3001.4187)
+
+#### 卷积核随机初始化
+
+##### 疑问
+
+- 为什么一个卷积核对应一个特征图？
+- 为什么同一张图不同的卷积核学到的特征图不同？
+
+##### 资料
+
+- [卷积神经网络中卷积核是如何学习到特征的？ - 知乎 (zhihu.com)](https://www.zhihu.com/question/430129801)
+
+
+
