--- a/五月/5.16.md
+++ b/五月/5.16.md
@@ -34,5 +34,8 @@
 
 - [卷积神经网络中卷积核是如何学习到特征的？ - 知乎 (zhihu.com)](https://www.zhihu.com/question/430129801)
 
+# 书籍
 
+- [《Python深度学习实战:基于Pytorch》 - 当当 -  (dangdang.com)](http://product.dangdang.com/11134506556.html) 
+  - 最近在看这本，感觉讲好细，之前学过几次的东西还能被带着找到重要的细节
 
