--- a/五月/5.16.md
+++ b/五月/5.16.md
@@ -34,6 +34,16 @@
 
 - [卷积神经网络中卷积核是如何学习到特征的？ - 知乎 (zhihu.com)](https://www.zhihu.com/question/430129801)
 
+#### 卷积操作
+
+##### 疑问
+
+- 多通道卷积时，用不同的卷积核对每一个通道进行卷积，用激活函数合并特征是什么意思？
+  - [多通道(比如RGB三通道)卷积过程_deep_learninger的博客-CSDN博客_多通道卷积](https://blog.csdn.net/u014114990/article/details/51125776?ops_request_misc=%7B%22request%5Fid%22%3A%22165267790916782390517023%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165267790916782390517023&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-51125776-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=多通道卷积&spm=1018.2226.3001.4187)
+  - 依然是比如十个核，一个核对三个通道分别卷积后合并（应该）
+- 神经网络图中卷积核体现在哪？
+  - 就是说卷积层那几个神经代表的是什么
+
 # 书籍
 
 - [《Python深度学习实战:基于Pytorch》 - 当当 -  (dangdang.com)](http://product.dangdang.com/11134506556.html) 
