--- a/五月/5.16.md
+++ b/五月/5.16.md
@@ -54,6 +54,7 @@
 
 - [[深度学习\]Inception Net （V1-V4）系列论文笔记_Thorrrrrrrrrr的博客-CSDN博客_inceptionnet](https://blog.csdn.net/sinat_33487968/article/details/83588372?ops_request_misc=%7B%22request%5Fid%22%3A%22165268090216780366537156%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165268090216780366537156&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-2-83588372-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=inceptionnet-v1&spm=1018.2226.3001.4187)
 - [卷积神经网络学习路线（三）| 盘点不同类型的池化层、1*1卷积的作用和卷积核是否一定越大越好？ - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/96528331) 复现的时候刚好遇到重叠池化，我看了一眼
+- [“logits”到底是个什么意思？_AlexXuZe的博客-CSDN博客_logits](https://blog.csdn.net/nbxzkok/article/details/84838984?ops_request_misc=%7B%22request%5Fid%22%3A%22165269845916781818797925%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165269845916781818797925&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-84838984-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=logits&spm=1018.2226.3001.4187) 复现的代码里有一个变量名用了logit提示字典没有…好奇就看了一下
 
 #### 代码
 
@@ -62,9 +63,18 @@
   - 尤其是这代码来自一个GitHub项目，里面有好多CNN的pytorch实现，非常棒
   - 但是我不是很清楚为什么要有中间模块InceptionAux这个辅助分类器，有空再想想
   - 另外就是还是觉得自己对这些功能层到底是怎么设计分配的不够清楚，比如每一层的参数，层与层的先后关系等，所以打算多复现几个网络来熟悉熟悉
+  - 比如有的卷积层用了padding，有的木有……
+-   [test.py](test.py) 
+  - 这就是我复现的，一模一样……不过稍微能理解一下结构，但是很不幸，其中InceptionV1Module模块的参数为什么是这样完全还不理解，希望能了解一下
+  - 同时因为这些奇奇怪怪的参数我抄错了好几个地方……检查了半天
 
 ### 书籍
 
 - [《Python深度学习实战:基于Pytorch》 - 当当 -  (dangdang.com)](http://product.dangdang.com/11134506556.html) 
   - 最近在看这本，感觉讲好细，之前学过几次的东西还能被带着找到重要的细节
+
+# 玩
+
+- 最近在玩一个放置游戏……无敌套娃，剧情还是挺有意思的，刚好快通关了（**99.6%**），分享一下，适合学习时点几下~~分散注意力~~
+- **《Increlution》**，是steam上的，有汉化教程 [Increlution - Git游戏 - gityx.com (g8hh.com)](https://www.g8hh.com/#/game/increlution)
 
