--- a/五月/5.16.md
+++ b/五月/5.16.md
@@ -64,7 +64,7 @@
   - 但是我不是很清楚为什么要有中间模块InceptionAux这个辅助分类器，有空再想想
   - 另外就是还是觉得自己对这些功能层到底是怎么设计分配的不够清楚，比如每一层的参数，层与层的先后关系等，所以打算多复现几个网络来熟悉熟悉
   - 比如有的卷积层用了padding，有的木有……
--   [test.py](test.py) 
+-    [InceptionV1.py](InceptionV1.py) 
   - 这就是我复现的，一模一样……不过稍微能理解一下结构，但是很不幸，其中InceptionV1Module模块的参数为什么是这样完全还不理解，希望能了解一下
   - 同时因为这些奇奇怪怪的参数我抄错了好几个地方……检查了半天
 
