--- a/五月/5.16.md
+++ b/五月/5.16.md
@@ -55,6 +55,7 @@
 - [[深度学习\]Inception Net （V1-V4）系列论文笔记_Thorrrrrrrrrr的博客-CSDN博客_inceptionnet](https://blog.csdn.net/sinat_33487968/article/details/83588372?ops_request_misc=%7B%22request%5Fid%22%3A%22165268090216780366537156%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165268090216780366537156&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-2-83588372-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=inceptionnet-v1&spm=1018.2226.3001.4187)
 - [卷积神经网络学习路线（三）| 盘点不同类型的池化层、1*1卷积的作用和卷积核是否一定越大越好？ - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/96528331) 复现的时候刚好遇到重叠池化，我看了一眼
 - [“logits”到底是个什么意思？_AlexXuZe的博客-CSDN博客_logits](https://blog.csdn.net/nbxzkok/article/details/84838984?ops_request_misc=%7B%22request%5Fid%22%3A%22165269845916781818797925%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165269845916781818797925&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-84838984-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=logits&spm=1018.2226.3001.4187) 复现的代码里有一个变量名用了logit提示字典没有…好奇就看了一下
+- [神经网络算法学习---mini-batch_非文艺小燕儿_Vivien的博客-CSDN博客](https://blog.csdn.net/fuwenyan/article/details/53914371?ops_request_misc=%7B%22request%5Fid%22%3A%22165270834116780366574940%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165270834116780366574940&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-2-53914371-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=mini-batch&spm=1018.2226.3001.4187)
 
 #### 代码
 
