--- a/五月/5.17.md
+++ b/五月/5.17.md
@@ -6,5 +6,7 @@
   - 基本是在forward函数中使用，让张量一维展开，行数为（x.size(0) = batchsize） 
 - [Pytorch MNIST数据集标准化为什么是transforms. Normalize((0.1307,), (0.3081,))_极客Array的博客-CSDN博客_mnist normalize](https://blog.csdn.net/Harpoon_fly/article/details/84987589)
   - 原来不同数据集有各自的标准化参数，对参数的理解又上了一层
+- [Python关于%matplotlib inline报错_张小白小小白的博客-CSDN博客_%matplotlib inline报错](https://blog.csdn.net/qq_38355352/article/details/88783832?ops_request_misc=&request_id=&biz_id=102&utm_term=%matplotlib inline报错&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-88783832.142^v10^pc_search_result_control_group,157^v4^control&spm=1018.2226.3001.4187)
+  - 一个很傻的问题…我搜了一下
 
 ​	
