--- a/五月/5.17.md
+++ b/五月/5.17.md
@@ -2,11 +2,33 @@
 
 ### pytorch
 
+#### 资料
+
 - [x = x.view(x.size(0), -1)用法_仁义礼智信达的博客-CSDN博客_x.size(0)](https://blog.csdn.net/qq_36201400/article/details/108738463) 
   - 基本是在forward函数中使用，让张量一维展开，行数为（x.size(0) = batchsize） 
 - [Pytorch MNIST数据集标准化为什么是transforms. Normalize((0.1307,), (0.3081,))_极客Array的博客-CSDN博客_mnist normalize](https://blog.csdn.net/Harpoon_fly/article/details/84987589)
   - 原来不同数据集有各自的标准化参数，对参数的理解又上了一层
 - [Python关于%matplotlib inline报错_张小白小小白的博客-CSDN博客_%matplotlib inline报错](https://blog.csdn.net/qq_38355352/article/details/88783832?ops_request_misc=&request_id=&biz_id=102&utm_term=%matplotlib inline报错&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-88783832.142^v10^pc_search_result_control_group,157^v4^control&spm=1018.2226.3001.4187)
   - 一个很傻的问题…我搜了一下
+- [tqdm 简介及正确的打开方式_、Edgar的博客-CSDN博客_tqdm](https://blog.csdn.net/weixin_44676081/article/details/104834371?ops_request_misc=%7B%22request%5Fid%22%3A%22165278710916781432915309%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165278710916781432915309&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-2-104834371-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=tqdm&spm=1018.2226.3001.4187)
+  - 用到了这个库，原来是进度条，还挺有意思
+  - 然后才发现我的代码里面100次迭代……我说怎么训练这么久……没办法，等他半小时
 
-​	
+
+#### 代码
+
+-  [MNIST数字识别.py](MNIST数字识别.py) 
+  - 是今天的复现任务，还行
+
+
+
+# 阅读
+
+### CSDN
+
+- [我为Android版Microsoft Edge所带来的变化_guolin的博客-CSDN博客](https://blog.csdn.net/guolin_blog/article/details/124769285?spm=1000.2115.3001.5927)
+  - 突然看到标题进去的，感觉是大佬，有点意思
+
+# 今日总结
+
+- 今天四节课（两节是在上午下午同一个教室上的政治课）……没一节能翘的，所以没啥时间学，晚上稍微搞了点简单的应付一下
