--- a/五月/5.17.md
+++ b/五月/5.17.md
@@ -33,3 +33,4 @@
 
 - 今天四节课（两节是在上午下午同一个教室上的政治课）……没一节能翘的，所以没啥时间学，晚上稍微搞了点简单的应付一下
 - 马上要开始学新的内容了，比如RNN到Transformer
+- 才想起来今天本来要把inception后面几代学一下的……唉，好忙，明天就一节课，先把历史遗留问题搞好
