--- a/五月/5.17.md
+++ b/五月/5.17.md
@@ -19,8 +19,12 @@
 
 -  [MNIST数字识别.py](MNIST数字识别.py) 
   - 是今天的复现任务，还行
+  - ![image-20220517212938205](E:\Project\GitHub\amazing-fish\study-notes\五月\image-20220517212938205.png)
 
+### Inception V2~4
 
+- [标签平滑(label smoothing)_InceptionZ的博客-CSDN博客_标签平滑](https://blog.csdn.net/weixin_44441131/article/details/106436808?ops_request_misc=%7B%22request%5Fid%22%3A%22165279097116782395346980%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165279097116782395346980&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-1-106436808-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=标签平滑&spm=1018.2226.3001.4187) 
+- [Inception-V3_Bugger99的博客-CSDN博客_辅助分类器的作用](https://blog.csdn.net/qq_42044264/article/details/115868814?ops_request_misc=&request_id=&biz_id=102&utm_term=inception非对称卷积&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-115868814.142^v10^pc_search_result_control_group,157^v4^control&spm=1018.2226.3001.4187) 
 
 # 阅读
 
