--- a/五月/5.17.md
+++ b/五月/5.17.md
@@ -19,7 +19,7 @@
 
 -  [MNIST数字识别.py](MNIST数字识别.py) 
   - 是今天的复现任务，还行
-  - ![image-20220517212938205](E:\Project\GitHub\amazing-fish\study-notes\五月\image-20220517212938205.png)
+  - ![image-20220517212938205](https://raw.githubusercontent.com/amazing-fish/study-notes/main/%E4%BA%94%E6%9C%88/image-20220517212938205.png)
 
 ### Inception V2~4
 
