--- a/五月/5.17.md
+++ b/五月/5.17.md
@@ -25,6 +25,9 @@
 
 - [标签平滑(label smoothing)_InceptionZ的博客-CSDN博客_标签平滑](https://blog.csdn.net/weixin_44441131/article/details/106436808?ops_request_misc=%7B%22request%5Fid%22%3A%22165279097116782395346980%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165279097116782395346980&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-1-106436808-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=标签平滑&spm=1018.2226.3001.4187) 
 - [Inception-V3_Bugger99的博客-CSDN博客_辅助分类器的作用](https://blog.csdn.net/qq_42044264/article/details/115868814?ops_request_misc=&request_id=&biz_id=102&utm_term=inception非对称卷积&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-115868814.142^v10^pc_search_result_control_group,157^v4^control&spm=1018.2226.3001.4187) 
+- [Pytorch实现InceptionV4模型_宇宙超级无敌小菜鸡的博客-CSDN博客_inceptionv4 pytorch](https://blog.csdn.net/wsjjason/article/details/113838926?ops_request_misc=%7B%22request%5Fid%22%3A%22165279495716781685321519%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165279495716781685321519&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-113838926-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=inceptionv4pytorch代码&spm=1018.2226.3001.4187) 
+  - V4太复杂了…呜呜，有空再复现吧，今天先把链接放这
+
 
 # 阅读
 
@@ -37,4 +40,5 @@
 
 - 今天四节课（两节是在上午下午同一个教室上的政治课）……没一节能翘的，所以没啥时间学，晚上稍微搞了点简单的应付一下
 - 马上要开始学新的内容了，比如RNN到Transformer
-- 才想起来今天本来要把inception后面几代学一下的……唉，好忙，明天就一节课，先把历史遗留问题搞好
+- ~~才想起来今天本来要把inception后面几代学一下的……唉，好忙，明天就一节课，先把历史遗留问题搞好~~
+- 趁着打完卡图书馆关门前又把Inception后面几代看了一下~~，放过它吧~~
