--- a/五月/5.17.md
+++ b/五月/5.17.md
@@ -27,6 +27,9 @@
 - [Inception-V3_Bugger99的博客-CSDN博客_辅助分类器的作用](https://blog.csdn.net/qq_42044264/article/details/115868814?ops_request_misc=&request_id=&biz_id=102&utm_term=inception非对称卷积&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-115868814.142^v10^pc_search_result_control_group,157^v4^control&spm=1018.2226.3001.4187) 
 - [Pytorch实现InceptionV4模型_宇宙超级无敌小菜鸡的博客-CSDN博客_inceptionv4 pytorch](https://blog.csdn.net/wsjjason/article/details/113838926?ops_request_misc=%7B%22request%5Fid%22%3A%22165279495716781685321519%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165279495716781685321519&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-113838926-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=inceptionv4pytorch代码&spm=1018.2226.3001.4187) 
   - V4太复杂了…呜呜，有空再复现吧，今天先把链接放这
+- https://www.bilibili.com/video/BV1b5411g7Xo?spm_id_from=333.999.0.0
+  - 还有李沐的视频也好像有提到，我有空看看
+
 
 
 # 阅读
