--- a/五月/5.18.md
+++ b/五月/5.18.md
@@ -15,8 +15,29 @@
 
 ##### LSTM
 
-- [LSTM原理及实现（一）_bill_b的博客-CSDN博客_lstm原理及实现](https://blog.csdn.net/weixin_44162104/article/details/88660003?ops_request_misc=%7B%22request%5Fid%22%3A%22165283086116781432951546%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165283086116781432951546&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-88660003-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=LSTM&spm=1018.2226.3001.4187)
+- [LSTM原理及实现（一）_bill_b的博客-CSDN博客](https://blog.csdn.net/weixin_44162104/article/details/88660003?ops_request_misc=%7B%22request%5Fid%22%3A%22165283086116781432951546%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165283086116781432951546&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-88660003-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=LSTM&spm=1018.2226.3001.4187)
   - 感觉为了解决梯度传播的方法都和残差是同一个思想
 
 - [了解LSTM网络 -- colah的博客](http://colah.github.io/posts/2015-08-Understanding-LSTMs/)
   - 然后发现了这一篇，讲的比较全……colah这网站好像挺强
+
+##### GUR
+
+- 看到说和LSTM没有实践上的大区别，就不打算细看了
+
+#### RNNLM
+
+- [Recurrent Neural Network Based Language Model (vutbr.cz)](http://www.fit.vutbr.cz/research/groups/speech/publi/2010/mikolov_interspeech2010_IS100722.pdf)
+  - 先把论文收着，到时候再看
+- [语言模型（三）—— 循环神经网络语言模型（RNNLM）与语言模型评价指标_-CSDN博客](https://blog.csdn.net/rongsenmeng2835/article/details/108656674?ops_request_misc=%7B%22request%5Fid%22%3A%22165284486716781435438842%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165284486716781435438842&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-2-108656674-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=rnnlm&spm=1018.2226.3001.4187) 
+
+# 笔记
+
+### 软件
+
+#### typora
+
+- 今天闲着没事觉得跳出来的激活界面太烦了，就直接买了，谁是大冤种我不说🥺
+- 然后就去查了使用说明，不能白买
+- **[Typora功能汇总 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/483671352)**
+
