--- a/五月/5.18.md
+++ b/五月/5.18.md
@@ -4,12 +4,25 @@
 
 #### NNLM
 
+##### 结构
+
 - https://jmlr.org/papers/v3/bengio03a.html
   - 书上说是NLP入门必读论文……还没仔细看
 
 - [白叶琪/word_language_model (github.com)](https://github.com/BAI-Yeqi/word_language_model) 
   - 找到的一个pytorch实现……也还没仔细看
-- [A Neural Probabilistic Language Model(文献阅读笔记) -CSDN博客](https://blog.csdn.net/NINJA_xu/article/details/117660476?ops_request_misc=%7B%22request%5Fid%22%3A%22165283963216782425116820%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165283963216782425116820&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-117660476-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=A+Neural+Probabilistic+Language+Model&spm=1018.2226.3001.4187)
+- [A Neural Probabilistic Language Model(文献阅读笔记) -CSDN博客](https://blog.csdn.net/NINJA_xu/article/details/117660476?ops_request_misc=%7B%22request%5Fid%22%3A%22165283963216782425116820%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165283963216782425116820&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-117660476-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=A+Neural+Probabilistic+Language+Model&spm=1018.2226.3001.4187) 
+
+##### Word Embedding
+
+- [Word Embedding（一）NNLM、word2vec、GloVe_耩豇的博客-CSDN博客](https://blog.csdn.net/qq_33858719/article/details/93356042?ops_request_misc=%7B%22request%5Fid%22%3A%22165284980916781685319052%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165284980916781685319052&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-93356042-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=nnlm和embedding&spm=1018.2226.3001.4187)
+  - 没细看
+
+- [如何通俗理解word2vec_v_JULY_v的博客-CSDN博客_word2vec](https://blog.csdn.net/v_JULY_v/article/details/102708459?ops_request_misc=%7B%22request%5Fid%22%3A%22165284927116781818723065%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165284927116781818723065&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-2-102708459-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=Word2Vec&spm=1018.2226.3001.4187) 
+  - 讲的很详细，数学分析还没看（晕）
+- [理解GloVe模型（+总结）_AI蜗牛之家的博客-CSDN博客_glove模型](https://blog.csdn.net/u014665013/article/details/79642083?ops_request_misc=%7B%22request%5Fid%22%3A%22165284928216781432998188%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165284928216781432998188&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-79642083-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=GloVe&spm=1018.2226.3001.4187) 
+  - 还没细看
+
 
 #### RNN
 
