--- a/五月/5.18.md
+++ b/五月/5.18.md
@@ -52,6 +52,9 @@
 
 - [Convolutional Sequence to Sequence Learning (mlr.press)](http://proceedings.mlr.press/v70/gehring17a.html)
   - flag: 有空看
+- [facebookresearch/fairseq：用Python编写的Facebook AI Research Sequence-to-Sequence Toolkit。 (github.com)](https://github.com/facebookresearch/fairseq)
+  - 看到一个Facebook的开源库
+
 
 # 笔记
 
