--- a/五月/5.18.md
+++ b/五月/5.18.md
@@ -53,9 +53,12 @@
 - [Convolutional Sequence to Sequence Learning (mlr.press)](http://proceedings.mlr.press/v70/gehring17a.html)
   - flag: 有空看
 - [基于CNN的Seq2Seq模型-Convolutional Sequence to Sequence_修炼打怪的小乌龟的博客-CSDN博客_convseq2seq](https://blog.csdn.net/u010417185/article/details/83089986?ops_request_misc=%7B%22request%5Fid%22%3A%22165285742416782350975852%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165285742416782350975852&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-6-83089986-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=ConvSeq2Seq&spm=1018.2226.3001.4187)
-- [facebookresearch/fairseq：用Python编写的Facebook AI Research Sequence-to-Sequence Toolkit。 (github.com)](https://github.com/facebookresearch/fairseq)
-  - 看到一个Facebook的开源库
+- ~~[facebookresearch/fairseq：用Python编写的Facebook AI Research Sequence-to-Sequence Toolkit。 (github.com)](https://github.com/facebookresearch/fairseq)~~
+  - ~~看到一个Facebook的开源库~~
   - 刚看了一下好像不支持Windows？
+- [机器翻译模型五CNN+seq2seq__Pytorch实现_散人stu174的博客-CSDN博客_cnn seq2seq](https://blog.csdn.net/weixin_38544305/article/details/115788602?ops_request_misc=%7B%22request%5Fid%22%3A%22165286506116782246495847%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165286506116782246495847&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-115788602-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=conv_seq2seq+pytorch实现&spm=1018.2226.3001.4187) 
+  - 重新找了个代码带讲解，感觉不错
+
 
 
 # 笔记
