--- a/五月/5.18.md
+++ b/五月/5.18.md
@@ -56,12 +56,18 @@
 - ~~[facebookresearch/fairseq：用Python编写的Facebook AI Research Sequence-to-Sequence Toolkit。 (github.com)](https://github.com/facebookresearch/fairseq)~~
   - ~~看到一个Facebook的开源库~~
   - 刚看了一下好像不支持Windows？
-- [机器翻译模型五CNN+seq2seq__Pytorch实现_散人stu174的博客-CSDN博客_cnn seq2seq](https://blog.csdn.net/weixin_38544305/article/details/115788602?ops_request_misc=%7B%22request%5Fid%22%3A%22165286506116782246495847%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165286506116782246495847&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-115788602-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=conv_seq2seq+pytorch实现&spm=1018.2226.3001.4187) 
-  - 重新找了个代码带讲解，感觉不错
+- **[机器翻译模型五CNN+seq2seq__Pytorch实现_散人stu174的博客-CSDN博客_cnn seq2seq](https://blog.csdn.net/weixin_38544305/article/details/115788602?ops_request_misc=%7B%22request%5Fid%22%3A%22165286506116782246495847%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165286506116782246495847&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-115788602-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=conv_seq2seq+pytorch实现&spm=1018.2226.3001.4187)**
+  - 重新找了个代码带讲解，感觉挺不错
+  - 下面是看讲解时又遇到的问题
+  - 为什么经过glu激活后维度会降一半？
+  - **焯，因为版本问题，有的方法无法使用，目前只能降版本……但是不知道作者是哪个版本**，暂时放一下
 
 
+- [GLU（Gated Linear Unit，门控线性单元）简介_coder1479的博客-CSDN博客_门控线性单元](https://blog.csdn.net/m0_48742971/article/details/123431686?ops_request_misc=%7B%22request%5Fid%22%3A%22165286664716781818744507%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165286664716781818744507&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-1-123431686-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=GLU&spm=1018.2226.3001.4187) 
+- [Language Modeling with Gated Convolutional Networks(句子建模之门控CNN）--模型简介篇_liuchongee的博客-CSDN博客](https://blog.csdn.net/liuchonge/article/details/70238350) 
 
-# 笔记
+
+# 资源
 
 ### 软件
 
@@ -69,10 +75,21 @@
 
 - 今天闲着没事觉得跳出来的激活界面太烦了，就直接买了，谁是大冤种我不说🥺
 - 然后就去查了使用说明，不能白买
-- **[Typora功能汇总 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/483671352)**
+- **[Typora功能汇总 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/483671352)** 
+
+### python库
+
+- spaCy 
+  - [NLP in Python(spaCy模块的简单使用)_Janvn的博客-CSDN博客_python spacy](https://blog.csdn.net/u013709332/article/details/99700332?ops_request_misc=%7B%22request%5Fid%22%3A%22165286883516781685314217%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165286883516781685314217&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-99700332-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=spaCy&spm=1018.2226.3001.4187) 
+  - 好像是类似NLP里的numpy
+- torchtext
+  - [【Pytorch】【torchtext(一)】概述与基本操作_BQW_的博客-CSDN博客](https://blog.csdn.net/bqw18744018044/article/details/109149646?ops_request_misc=&request_id=&biz_id=102&utm_term=torchtext&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-3-109149646.nonecase&spm=1018.2226.3001.4187) 
+  - 好像是pytorch的语料库，用到的时候再细看
+  - **焯，有大问题**
 
 # 今日总结
 
 - 今天开始看NLP了，虽然才刚开始，但已经遇到了好多重要的论文和发展转折点
 - 感觉得慢慢来，周末可以抽空看一看几篇论文，以及代码的实现（虽然知道这方面的训练好像要很久）
+- 
 
