--- a/五月/5.18.md
+++ b/五月/5.18.md
@@ -91,5 +91,5 @@
 
 - 今天开始看NLP了，虽然才刚开始，但已经遇到了好多重要的论文和发展转折点
 - 感觉得慢慢来，周末可以抽空看一看几篇论文，以及代码的实现（虽然知道这方面的训练好像要很久）
-- 
+- 本来想复现一个代码结果因为库的更新反复横跳的函数，没法搞。得有时间去研究了
 
