--- a/五月/5.19.md
+++ b/五月/5.19.md
@@ -10,6 +10,19 @@
   - 频域分析图
   - 结果音频
 
+#### 策划
+
+1. 找到几个候选适合的混合音频文件
+2. 使用python画出音频文件的时域和频域图
+3. 设置高通、低通滤波器获得分离后的音频
+4. 画出分离后的时域频域图
+5. 完成PPT
+
+#### 进度
+
+- [python音频分析（一）绘制wav的时域频域图_-CSDN博客_python 音频频谱图](https://blog.csdn.net/sinat_30165411/article/details/102253584?ops_request_misc=%7B%22request%5Fid%22%3A%22165293590816781432936220%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165293590816781432936220&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-102253584-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=画频域图&spm=1018.2226.3001.4187) 
+- 
+
 # 今日总结
 
 ***救命***
