--- a/五月/5.19.md
+++ b/五月/5.19.md
@@ -21,7 +21,6 @@
 #### 进度
 
 - [python音频分析（一）绘制wav的时域频域图_-CSDN博客_python 音频频谱图](https://blog.csdn.net/sinat_30165411/article/details/102253584?ops_request_misc=%7B%22request%5Fid%22%3A%22165293590816781432936220%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165293590816781432936220&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-102253584-null-null.142^v10^pc_search_result_control_group,157^v4^control&utm_term=画频域图&spm=1018.2226.3001.4187) 
-- 
 
 # 今日总结
 
@@ -29,12 +28,17 @@
 
 最近先搞一下作业……
 
+救命，今天一直在玩，准备就当今天休息了……明天继续干活
+
 ### 作业清单
 
 #### 信号系统
 
 - 大作业 -5.22
-- 上课内容
+- 上课内容 
+  - 周期信号的傅里叶级数→拉普拉斯变换
+  - 完成度 ✨1/8
+
 - MOOC测试 -5.22
 
 #### 模电
