--- a/五月/5.20.md
+++ b/五月/5.20.md
@@ -13,10 +13,14 @@
   - [FLV转MP3 -- 小熊音频在线工具 (bearaudiotool.com)](https://www.bearaudiotool.com/zh/flv-to-mp3)
   - 这个能转的更大一点
 
-- [(1条消息) Anaconda Navigator启动缓慢，甚至卡住的解决方案_Leopold_Fitz的博客-CSDN博客_anaconda打开很慢](https://blog.csdn.net/qq_37374155/article/details/105776980?spm=1001.2101.3001.6650.3&utm_medium=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~Rate-3-105776980-blog-121365478.pc_relevant_paycolumn_v3&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~Rate-3-105776980-blog-121365478.pc_relevant_paycolumn_v3&utm_relevant_index=6) 
+- [Anaconda Navigator启动缓慢，甚至卡住的解决方案_Leopold_Fitz的博客-CSDN博客_anaconda打开很慢](https://blog.csdn.net/qq_37374155/article/details/105776980?spm=1001.2101.3001.6650.3&utm_medium=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~Rate-3-105776980-blog-121365478.pc_relevant_paycolumn_v3&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2~default~CTRLIST~Rate-3-105776980-blog-121365478.pc_relevant_paycolumn_v3&utm_relevant_index=6) 
   - **焯，超有用**
 
 救命，啥都干不了，直接anaconda卸载重装
 
 - pyaudio库杀我……md
-- 搞了一小半……去复习模电了
+- ~~搞了一小半……去复习模电了~~
+- [在频率域进行音频滤波（Python）_欧阳罢笔的博客-CSDN博客_python 音频滤波](https://blog.csdn.net/qq_39798423/article/details/86764443?ops_request_misc=&request_id=&biz_id=102&utm_term=python实现声音滤波&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-86764443.142^v10^pc_search_result_control_group,157^v4^control&spm=1018.2226.3001.4187)
+
+
+
