--- a/五月/5.20.md
+++ b/五月/5.20.md
@@ -22,7 +22,9 @@
 - ~~搞了一小半……去复习模电了~~
 - [在频率域进行音频滤波（Python）_欧阳罢笔的博客-CSDN博客_python 音频滤波](https://blog.csdn.net/qq_39798423/article/details/86764443?ops_request_misc=&request_id=&biz_id=102&utm_term=python实现声音滤波&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-86764443.142^v10^pc_search_result_control_group,157^v4^control&spm=1018.2226.3001.4187) 
 - TNND，我的任务完成啦！
-- 虽然是把歌曲的人声给去了……
+  - 虽然是把歌曲的人声给去了……
+
+- 救命，老师还让加上声图谱分析，真的明天再搞了
 
 
 
