--- a/五月/5.20.md
+++ b/五月/5.20.md
@@ -26,5 +26,9 @@
 
 - 救命，老师还让加上声图谱分析，真的明天再搞了
 
+### MATLAB
 
+md安装一半失败了
+
+- [MATLAB各个产品概述----哪些产品需要安装？哪些产品不需要安装？阅完了然_孙 悟 空的博客-CSDN博客](https://blog.csdn.net/weixin_46098577/article/details/124462050)
 
