--- a/六月/6.26.md
+++ b/六月/6.26.md
@@ -16,7 +16,13 @@
 #### 关于近期安排
 
 - 第一，当然是把这学期最后一项任务…… **专业基础实践** 给搞完，不就一个汽车图像识别嘛，两天还搞不定你? 当然我感觉我会搞得很粗糙（明明是三个人的小组任务，我把它变成了一个人两天的狂欢）。希望上个月打的基础还记得一些吧，明天搞起来能快一点。
+
 - 第二，快出分吧，如果有两门没过的话我好早准备（留下书，其他的都要扔了），寝室里东西堆满了，卫生检查这关怕是过不去
 
-- 第三，对人工智能的学习……这点比较重要，和导师（郭雨薇）说好了七月底要回学校跟着师兄搞那个项目
+- 第三，对人工智能的学习……这点比较重要，和导师（郭雨薇）说好了七月底要回学校跟着师兄搞那个项目           **暂停**
+
+  - 寄，要重新搞一下上传图片的东西，明天继续写吧，不然我怕军训晕倒
+
+    
+
 
