--- a/六月/6.26.md
+++ b/六月/6.26.md
@@ -19,10 +19,28 @@
 
 - 第二，快出分吧，如果有两门没过的话我好早准备（留下书，其他的都要扔了），寝室里东西堆满了，卫生检查这关怕是过不去
 
-- 第三，对人工智能的学习……这点比较重要，和导师（郭雨薇）说好了七月底要回学校跟着师兄搞那个项目           **暂停**
+- 第三，对人工智能的学习……这点比较重要，和导师（郭雨薇）说好了七月底要回学校跟着师兄搞那个项目           ~~**暂停**~~
 
-  - 寄，要重新搞一下上传图片的东西，明天继续写吧，不然我怕军训晕倒
+  - ~~寄，要重新搞一下上传图片的东西，明天继续写吧，不然我怕军训晕倒~~ 失败……没睡成，直接搞完了,虽然搞得很难看
 
+    <table frame=void>	<!--使用table标签，且frame=void消除外边框-->
+    	<tr>		   <!--<tr>一行的内容<\tr>，<td>一个格子的内容<\td>-->
+        <td><center><img src="https://raw.githubusercontent.com/amazing-fish/images/main/img/202206270156632.jpg"
+                         style="zoom:10%;"
+                         alt="第一张图片显示不出时显示的文字"
+                         height=1000/></center></td>	<!--<center>标签将图片居中-->
+        <td><center><img src="https://raw.githubusercontent.com/amazing-fish/images/main/img/202206270156645.jpg"
+                         style="zoom:10%;"
+                         alt="第二张图片显示不出时显示的文字"
+                         height=1000/></center></td>
+        </tr>
+    </table>
     
+  - 继续
 
+  希望能顺利参与这个项目并做出贡献和学到新知识和锻炼实践能力。希望能先在暑假中开始进一步的学习。
+
+* 第四，尽量少熬夜吧，身体不行了！（02：24）
+
+#### END
 
