--- a/六月/6.27.md
+++ b/六月/6.27.md
@@ -10,3 +10,9 @@
 
 ![](https://raw.githubusercontent.com/amazing-fish/images/main/img/202206271434783.jpg)
 
+### wow
+
+军训完说截止时间改到7.5了，瞬间继续摆，慢慢写起来
+
+队友打算从网上co一份先交了，我慢慢写吧
+
