--- a/七月/1-6.md
+++ b/七月/1-6.md
@@ -39,3 +39,46 @@
 ###### 难分样本挖掘（Hard Mining）
 
 - [深度学习难分样本挖掘（Hard Mining） - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/51708428) 
+- fast R-CNN及后面的因为端对端没再用到这个
+
+###### **语义分割**（待看）
+
+- [史上最全语义分割综述（FCN,UNet,SegNet，Deeplab，ASPP...）_Jayden yang的博客-CSDN博客_语义分割](https://blog.csdn.net/qq_41997920/article/details/96479243) 
+- [一篇看完就懂的最新语义分割综述 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/110123136) 
+
+#### Fast R-CNN
+
+##### 学习
+
+- [【目标检测】FastRCNN算法详解_嘀嗒嘀嘀嗒嘀的博客-CSDN博客_fastrcnn](https://blog.csdn.net/ACBattle/article/details/80218625?ops_request_misc=%7B%22request%5Fid%22%3A%22165710089416781432926688%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165710089416781432926688&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-2-80218625-null-null.142^v31^down_rank,185^v2^control&utm_term=fast+rcnn&spm=1018.2226.3001.4187) 
+- [Fast R-CNN论文解读_月臻的博客-CSDN博客_fast rcnn论文](https://blog.csdn.net/h__ang/article/details/89092367?spm=1001.2101.3001.6650.2&utm_medium=distribute.pc_relevant.none-task-blog-2~default~BlogCommendFromBaidu~default-2-89092367-blog-105302563.pc_relevant_vip_default&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2~default~BlogCommendFromBaidu~default-2-89092367-blog-105302563.pc_relevant_vip_default&utm_relevant_index=3) 
+  - [[1504.08083\] Fast R-CNN (arxiv.org)](https://arxiv.org/abs/1504.08083) 论文
+  - [rbgirshick/fast-rcnn： Fast R-CNN (github.com)](https://github.com/rbgirshick/fast-rcnn) 源码
+
+##### 术语
+
+###### VGG16
+
+- [VGG16学习笔记 - Rogn - 博客园 (cnblogs.com)](https://www.cnblogs.com/lfri/p/10493408.html) 
+- 两个3\*3卷积代替5\*5卷积减少参数增加非线性
+
+###### SSPNet
+
+- [改进小目标检测！SSPNet：微小目标检测的尺度选择金字塔网络_Amusi（CVer）的博客-CSDN博客](https://blog.csdn.net/amusi1994/article/details/118716030) 
+  - [[2107.01548\] SSPNet: Scale Selection Pyramid Network for Tiny Person Detection from UAV Images (arxiv.org)](https://arxiv.org/abs/2107.01548) 论文
+
+###### 尺度不变性
+
+- 单尺度比多尺度的mAP只小了一个点左右但是快了许多
+- 该实验证明了深度神经网络善于直接学习尺度不变形，对目标的scale不敏感。
+
+### 资料
+
+#### GitHub
+
+- [amusi/CVPR2022-Papers-with-Code: CVPR 2022 论文和开源项目合集 (github.com)](https://github.com/amusi/CVPR2022-Papers-with-Code) 
+
+
+
+
+
