--- a/七月/9.md
+++ b/七月/9.md
@@ -6,7 +6,46 @@
 
 ##### 学习
 
-- 
+- [经典神经网络 | Faster R-CNN论文解析_小小谢先生的博客-CSDN博客](https://blog.csdn.net/xiewenrui1996/article/details/106247712) 
+  - [[1506.01497\] 更快的R-CNN：使用区域提案网络实现实时目标检测 (arxiv.org)](https://arxiv.org/abs/1506.01497) 论文
+  - [邵青人/faster_rcnn：更快的R-CNN (github.com)](https://github.com/ShaoqingRen/faster_rcnn) 源码
+- [一文读懂Faster RCNN - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/31426458) 
+  - 很细，:cow:的
+- [捋一捋pytorch官方FasterRCNN代码 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/145842317) 
+- [保姆级 faster rcnn 源码逐行解读—概览 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/390140081) 
+- [深度学习阅读导航 | 02 Faster R-CNN：基于RPN的实时目标检测_AI 菌的博客-CSDN博客](https://ai-wx.blog.csdn.net/article/details/105962056) 莫得看……以后有空再说
+
+##### 术语
+
+###### Region Proposal NetWork（RPN）
+
+- [Region Proposal Network(RPN) - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/106192020) 
+  - 提出问题并解释，很有用
+- [RPN（区域生成网络）_查里王的博客-CSDN博客_rpn是什么意思](https://blog.csdn.net/tony_vip/article/details/108827910) 
+  - 对论文图中的数据给出了解释，也是问题和解释
+
+###### anchor boxes（锚框）
+
+- feature map的每个点给出三种形状的九个框共WxHx9个
+
+###### Bounding Box Regression
+
+- [边框回归(Bounding Box Regression)详解_南有乔木NTU的博客-CSDN博客_bounding box regression](https://blog.csdn.net/zijin0802034/article/details/77685438) 
+- 用来微调
+- 似乎只保证Region Proposal和Ground Truth的宽高相差不多就能满足回归条件
+
+###### Proposal
+
+###### NMS（nonmaximum suppression）非极大值抑制
+
+- [非极大值抑制（Non-Maximum Suppression，NMS） - 康行天下 - 博客园 (cnblogs.com)](https://www.cnblogs.com/makefile/p/nms.html) 
 
 ### 额外
 
+- [动态滤波网络论文解读_小小谢先生的博客-CSDN博客](https://blog.csdn.net/xiewenrui1996/article/details/104157405)
+  - [[1605.09673\] Dynamic Filter Networks (arxiv.org)](https://arxiv.org/abs/1605.09673) 论文
+  - [dbbert/dfn (github.com)](https://github.com/dbbert/dfn) 源码
+- [机器学习在交通标志检测与精细分类中的应用 (qq.com)](https://mp.weixin.qq.com/s/IJUMCOBhgXHv7VC1YT4q_g) 
+- [facebookresearch/detectron2：Detectron2是一个用于对象检测，分割和其他视觉识别任务的平台。 (github.com)](https://github.com/facebookresearch/detectron2) 
+  - 好像是最新的rcnn系列
+- [extreme-assistant/CVPR2022-Paper-Code-Interpretation: cvpr2022/cvpr2021/cvpr2020/cvpr2019/cvpr2018/cvpr2017 论文/代码/解读/直播合集，极市团队整理 (github.com)](https://github.com/extreme-assistant/CVPR2022-Paper-Code-Interpretation) 
